[gd_scene load_steps=34 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Images/enemy/pride0001.png" type="Texture" id=2]
[ext_resource path="res://Images/enemy/pride0002.png" type="Texture" id=3]
[ext_resource path="res://Images/enemy/jealousy-01.png" type="Texture" id=4]
[ext_resource path="res://Images/enemy/jealousy-02.png" type="Texture" id=5]
[ext_resource path="res://Images/enemy/ignorance-01.png" type="Texture" id=6]
[ext_resource path="res://Images/enemy/ignorance-02.png" type="Texture" id=7]
[ext_resource path="res://Images/enemy/attachment-01.png" type="Texture" id=8]
[ext_resource path="res://Images/enemy/attachment-02.png" type="Texture" id=9]
[ext_resource path="res://Images/enemy/aversion-01.png" type="Texture" id=10]
[ext_resource path="res://Images/enemy/aversion-02.png" type="Texture" id=11]
[ext_resource path="res://Images/card/health0001.png" type="Texture" id=12]
[ext_resource path="res://Images/card/health0002.png" type="Texture" id=13]
[ext_resource path="res://Images/card/sword0001.png" type="Texture" id=14]
[ext_resource path="res://Images/card/sword0002.png" type="Texture" id=15]
[ext_resource path="res://Images/action/attack0001.png" type="Texture" id=16]
[ext_resource path="res://Images/action/attack0002.png" type="Texture" id=17]
[ext_resource path="res://Images/action/attack0003.png" type="Texture" id=18]
[ext_resource path="res://Images/action/attack0004.png" type="Texture" id=19]
[ext_resource path="res://Images/action/attack0005.png" type="Texture" id=20]
[ext_resource path="res://Images/action/attack0006.png" type="Texture" id=21]
[ext_resource path="res://Images/action/attack0007.png" type="Texture" id=22]
[ext_resource path="res://Images/action/attack0008.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "pride",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "jealousy",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "ignorance",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "attachment",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "aversion",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = SubResource( 8 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": false,
"name": "is_hit",
"speed": 80.0
} ]

[node name="Enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 6 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "attachment"
playing = true

[node name="HealthAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -13.1738, -83.2252 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="AttackAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 59.2416, -80.5836 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 3 )
playing = true

[node name="HealthLabel" type="Label" parent="."]
margin_left = -66.5886
margin_top = -103.546
margin_right = -26.5886
margin_bottom = -55.5458
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "50"
align = 1
valign = 1

[node name="AttackLabel" type="Label" parent="."]
margin_left = 15.1923
margin_top = -104.415
margin_right = 55.1923
margin_bottom = -56.4146
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 1
valign = 1

[node name="NameLabel" type="Label" parent="."]
margin_left = -87.5102
margin_top = 53.7905
margin_right = 89.4898
margin_bottom = 91.7905
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "attachment"
align = 1
valign = 1

[node name="IndexLabel" type="Label" parent="."]
margin_left = -88.2454
margin_top = 76.5783
margin_right = 88.7546
margin_bottom = 114.578
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1/5"
align = 1
valign = 1

[node name="IsHitAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )
animation = "is_hit"
flip_v = true
[connection signal="animation_finished" from="IsHitAnimatedSprite" to="." method="_on_IsHitAnimatedSprite_animation_finished"]
